<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">


    <item android:id="@+id/nav_account"
        android:title="@string/myaccount"
        android:icon="@drawable/ic_baseline_account_circle_24"/>

    <item android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"/>

    <item android:id="@+id/nav_log"
        android:title="@string/action_log_out_short"
        android:icon="@drawable/ic_baseline_logout_24"/>

    <item android:id="@+id/nav_history"
        android:title="@string/history"
        android:icon="@drawable/ic_baseline_history_24"/>


</menu>