<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieSearch"
    android:fitsSystemWindows="true"
    >




    <RelativeLayout
        android:id="@+id/framerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:background="@color/eggshell"
        >


        <ImageButton
            android:id="@+id/menubutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="35dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="onClick"
            android:src="@drawable/ic_baseline_menu_24" />

        <EditText
            android:id="@+id/editTextNimi"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/search_background"
            android:elevation="3dp"
            android:gravity="center"
            android:hint="@string/search_hint"
            android:inputType="text" />



        <com.example.a91.NDSpinner
            android:id="@+id/spinner"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/editTextAfter"
            android:backgroundTint="@color/accentpurple"

            />

        <ListView
            android:id="@+id/listview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/editTextAfter"
            android:layout_centerVertical="true"
            android:layout_marginTop="70dp" />

        <EditText
            android:id="@+id/editTextAfter"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="120dp"
            android:layout_toRightOf="@+id/editTextDate"
            android:backgroundTint="@color/accentpurple"
            android:ems="10"
            android:hint="@string/after_hint"
            android:inputType="time"
            android:textColor="@color/accentpurple"
            android:textColorHint="@color/accentpurple"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/editTextBefore"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:layout_toRightOf="@+id/editTextAfter"
            android:backgroundTint="@color/accentpurple"
            android:ems="10"
            android:hint="@string/before_hint"
            android:inputType="time"
            android:textColor="@color/accentpurple"
            android:layout_marginStart="30dp"
            android:textColorHint="@color/accentpurple"
            android:textSize="16dp" />


        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="100dp"
            android:layout_height="wrap_content"

            android:layout_alignParentLeft="true"
            android:layout_marginTop="120dp"

            android:backgroundTint="@color/accentpurple"
            android:ems="10"
            android:hint="@string/date_hint"
            android:inputType="date"
            android:textColor="@color/accentpurple"
            android:textColorHint="@color/accentpurple"
            android:textSize="16dp" />

        <ImageButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="35dp"
            android:layout_toEndOf="@+id/editTextNimi"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:onClick="searchByName"

            android:src="@drawable/ic_baseline_search_24" />


    </RelativeLayout>

    <!-- this implements the nav drawer-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />


</androidx.drawerlayout.widget.DrawerLayout>


